# BotScrapLink

./: .example.env  .exempl.env  .gitignore  README.md  catalogue.json  pyproject.toml  results.json
src/bot/: catalogue.py  scraper.py
