[project]
name = "bot"
version = "0.1.0"
description = ""
authors = [
    {name = "s29duckys",email = "nbarasraso@edenschool.fr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "requests (>=2.32.5,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "yt-dlp (>=2026.2.4,<2027.0.0)"
]

[tool.poetry.scripts]
scraper = "bot.scraper:main"
catalogue = "bot.catalogue:main"


[tool.poetry]
packages = [{include = "bot", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
